# Additive

./: .gitignore  .gitmodules  Additive.kdev4  CMakeLists.txt  README.MD  clang-toolchain.cmake  default-toolchain.cmake  mingw-toolchain.cmake  protoplug last compile.lua  toolchain-mingw64.cmake
.kdev4/: Additive.kdev4
src/: Additive.cpp  AdditiveUI.cpp  DistrhoPluginInfo.h  parameterNames.hpp
